remove a useless config

--- a/examples/pay_and_login.html
+++ b/examples/pay_and_login.html
@@ -124,7 +124,7 @@
         var data = JSON.stringify(queryParamter);
 
         var xhr = new XMLHttpRequest();
-        xhr.withCredentials = true;
+        //xhr.withCredentials = true;
 
         xhr.addEventListener("readystatechange", function () {
             if (this.readyState === this.DONE) {
